Fixed unused imports issue

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
     <meta property="og:title" content="AICWA - Impact Gateway" />
     <meta property="og:description" content="AICWA NGO - Making a difference in health, education, child welfare, old age support and humanity awareness" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@aicwa_ngo" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
