Fixed unused imports issue

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AICWA - Impact Gateway</title>
-    <meta name="description" content="AICWA NGO - Making a difference in health, education, child welfare, old age support and humanity awareness" />
+    <title>AICWA FOUNDATION</title>
+    <meta name="description" content="Support the Hands Behind Indian Cinema" />
     <meta name="author" content="AICWA" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap">
 
     <meta property="og:title" content="AICWA - Impact Gateway" />
     <meta property="og:description" content="AICWA NGO - Making a difference in health, education, child welfare, old age support and humanity awareness" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200" />
+    <meta property="og:image" content="/images/7.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@aicwa_ngo" />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?auto=format&fit=crop&w=1200" />
+    <meta name="twitter:image" content="/images/7.jpeg" />
   </head>
 
   <body>
